# TrayKeyboard

./: .gitignore  CMakeLists.txt  readme.md  spec.md
docs/: 设计文档.md
src/: main.cpp
test/: automation_dedup_regression.ps1  automation_focus_regression.ps1  test.txt
